Updated .gitignore for CLion

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,31 @@
+.idea/
 .vscode/
 build/
 docker-build
 build_dockers.sh
+
+# Covers JetBrains IDEs
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+
+# Generated files
+.idea/**/contentModel.xml
+
+# Sensitive or high-churn files
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
+
+# CMake
+cmake-build-*/
+
+# Editor-based Rest Client
+.idea/httpRequests
